adding new functions

--- a/msc_project_site/index.html
+++ b/msc_project_site/index.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <button id = "connect_button">Connect</button>
-        <p id = "p_text"></p>    
-        <script src = "./script.js"></script>
+        <p id = "p_text"></p>
+        <canvas id="hr_chart" style="width:100%;max-width:700px"></canvas>  
+        <script src = "./script2.js"></script>
     </body>
 </html>
